<resources>
    <string name="app_name" translatable="false">primitive ftpd</string>
    <string name="ifacesLabel">Network Interface</string>
    <string name="ipAddrLabel">IP Address</string>
    <string name="ifacesError">Error: </string>
    <string name="protocolLabel">Protocol</string>
    <string name="portLabel">Port</string>
    <string name="fingerprintsLabel">Key Fingerprints</string>
    <string name="allKeysFingerprintsLabel">Show fingerprints of all keys</string>
    <string name="generateKeysMessage">Generate Keys?</string>
    <string name="generatingKeysMessage">Generating Keys …</string>
    <string name="generate">Generate</string>
    <string name="cancel">Cancel</string>
    <string name="pubkeyAuthKeysHeading">Keys for public key auth</string>
    <string name="addPubkeyForAuth">Add public key for auth</string>
    <string name="pubkeyInvalid">Input is not a valid key, has been ignored.</string>
    <string name="noKeysPresent">No keys present.</string>
    <string name="state">State</string>
    <string name="serverStarted">Running …</string>
    <string name="serverStopped">Stopped</string>
    <string name="permissionRequired">\"%1$s\" permission is required for this app to work!</string>
    <string name="permissionNameStorage">Storage</string>
    <string name="quickSettingsServerStarted">pFTPd Running …</string>
    <string name="quickSettingsServerStopped">pFTPd Stopped</string>
    <string name="saveAs">Save as</string>
    <string name="startService">Start Server</string>
    <string name="stopService">Stop Server</string>
    <string name="toggleService">Toggle Server start/stop</string>
    <string name="notificationTitle">FTP Server</string>
    <string name="haveToSetPassword">You have to set a password first</string>
    <string name="haveToSetAuthMechanism">You have to set an authentication mechanism first</string>
    <string name="serverRunning">FTP Server is running</string>
    <string name="serverCouldNotBeStarted">Server could not be started! Error message: </string>
    <string name="portInvalid_v2">Port value is invalid. Must be between 1024 and 64000.</string>
    <string name="portsEqual_v2">Ports are equal. This cannot work.</string>
    <string name="restartServer">Restart the server for your changes to take effect.</string>
    <string name="invalidDir">Invalid folder.</string>
    <string name="couldNotReadKeyAuthKey">Public key for key authentication could not be read. Check logs.</string>
    <string name="ftpPassivePortsInvalid">Value of FTP Passive Ports is invalid.</string>
    <string name="prefs">Preferences</string>
    <string name="prefsCategoryTitleAuth">Authentification</string>
    <string name="prefsCategoryTitleConnectivity">Connectivity</string>
    <string name="prefsCategoryTitleUi">UI</string>
    <string name="prefsCategoryTitleSystem">System</string>
    <string name="prefTitleUser">Username</string>
    <string name="prefSummaryUser">FTP-server username</string>
    <string name="prefTitlePassword">Password</string>
    <string name="prefSummaryPassword">FTP server password</string>
    <string name="prefTitlePort">Port</string>
    <string name="prefSummaryPort">FTP server port</string>
    <string name="prefTitlePortSecure">Secure Port</string>
    <string name="prefSummaryPortSecure">FTP server port (encrypted)</string>
    <string name="prefBindIp">IP to bind to</string>
    <string name="prefSummaryBindIp">If you want servers to listen on one interface only.</string>
    <string name="prefTitleStartDir">Server Start Directory</string>
    <string name="prefSummaryStartDir">First directory after login</string>
    <string name="prefTitleAnnounce">Announce server in LAN</string>
    <string name="prefSummaryAnnounce">Announces FTP server in LAN via DNS-SD (Bonjour). May cause crashes on some devices.</string>
    <string name="prefTitleAnnounceName">Servername</string>
    <string name="prefSummaryAnnounceName">Name to announce server with.</string>
    <string name="prefTitleWakelock">Prevent Standby</string>
    <string name="prefSummaryWakelock">Prevents Standby while server is running. Standby can cause uploads/downloads to abort.</string>
    <string name="prefTitleWhichServerToStart">Server(s) to be started</string>
    <string name="prefSummaryWhichServerToStart">Choose whether to start FTP server only, SFTP server only or both.</string>
    <string name="prefTitleStartOnBoot">Start on boot</string>
    <string name="prefSummaryStartOnBoot">Start server on system boot.</string>
    <string name="prefShowTabNames">Show tab names</string>
    <string name="prefSummaryShowTabNames">Show names on tabs in main UI</string>
    <string name="prefTitleStartOnOpen">Start on open</string>
    <string name="prefSummaryStartOnOpen">Start server when app is opened.</string>
    <string name="prefTitleShowConnectionInfoInNotification">Show connection info in notification</string>
    <string name="prefSummaryShowConnectionInfoInNotification">Shows connection info like IP address in notification.</string>
    <string name="prefTitleSshowIpv4InNotification">Show IPv4 addresses in notification</string>
    <string name="prefSummaryShowIpv4InNotification">Shows IPv4 addresses in notification if connection info is turned on.</string>
    <string name="prefTitleSshowIpv6InNotification">Show IPv6 addresses in notification</string>
    <string name="prefSummaryShowIpv6InNotification">Shows IPv6 addresses in notification if connection info is turned on.</string>
    <string name="prefTitleShowStartStopNotification">Show notification to start/stop server(s)</string>
    <string name="prefSummaryShowStartStopNotification">Shows a notification at all time to have another quick way to start/stop server(s).</string>
    <string name="prefTitlePubKeyAuth">Public Key Authentication</string>
    <string name="prefSummaryPubKeyAuth">When enabled place your ssh2 public key in %s. SFTP only.</string>
    <string name="prefSummaryPubKeyAuth_v2">When enabled place your ssh2 public key in %s. It must be a file containing one key per line. SFTP only.</string>
    <string name="prefTitleAnonymousLogin">Anonymous Login</string>
    <string name="prefSummaryAnonymousLogin">Set if anonymous login is allowed on the server.</string>
    <string name="prefTitleFtpPassivePorts">FTP Passive Ports</string>
    <string name="prefSummaryFtpPassivePorts">Ports for FTP passive data connection. May be a single port, a list or range of ports. E.g. 5678,5700-5710,5800,5900.</string>
    <string name="prefTitleIdleTimeout">Server Idle Timeout</string>
    <string name="prefSummaryIdleTimeout">Server will terminate idle connections after this time in seconds (FTP only)</string>
    <string name="prefTitleIdleTimeoutServerStop">Idle timeout to stop server</string>
    <string name="prefSummaryIdleTimeoutServerStop">Server(s) will be stopped after this time in minutes if no client activity takes place. Set to 0 to disable.</string>
    <string name="prefSummaryIdleTimeoutV2">Server will terminate idle connections after this time in seconds. Set to 0 to disable.</string>
    <string name="prefTitleLogging">Log</string>
    <string name="prefSummaryLogging">Log serves analyzing of errors. If the app does not work properly on your device you can send a log to developers. May require to restart the app.</string>
    <string name="prefSummaryLoggingV2">Log serves analyzing of errors. If the app does not work properly on your device you can send a log to developers. May require to restart the app. Text Logs are stored in %s.</string>
    <string name="prefAllowedIpsPattern">Allowed IPs pattern</string>
    <string name="prefSummaryAllowedIpsPattern">Pattern of allowed IP Addresses. Just one Wildcard (*) may be used, as last character only.</string>
    <string name="prefTitleQuickSettingsRequiresUnlock">Quick Settings Tile unlock requirement</string>
    <string name="prefSummaryQuickSettingsRequiresUnlock">Clicking the quick settings tile requires the device to be unlocked to start/stop the server. When enabled, will prompt to unlock the device if it\'s locked.</string>
    <string name="prefRootCopyFiles">Root: copy files to tmp dir for up-/download</string>
    <string name="prefSummaryRootCopyFiles">There are issues accessing files with dd on some devices. With this setting files are copied to tmp dir first and access with filesystem mechanisms. Should be disabled for large files.</string>
    <string name="prefHostkeyAlgos">SFTP Hostkey algorithms</string>
    <string name="prefSummaryHostkeyAlgos">Algorithms to generate SFTP server keys (hostkeys) for</string>
    <string name="licence">Licence</string>
    <string name="reset">Reset</string>
    <string name="widgetTextStart">start (s)ftpd</string>
    <string name="widgetTextStop">stop (s)ftpd</string>
    <string name="isAnonymous">Anonymous Login: %1$b</string>
    <string name="passwordPresent">Password present: %1$b</string>
    <string name="pubKeyAuth">Public key auth: %1$b</string>
    <string name="selectServerAction">Select Server Action</string>
    <string name="isServerRunning">Is server running?</string>
    <string name="storageType">Storage Type</string>
    <string name="storageTypePlain">Plain old filesystem</string>
    <string name="storageTypePlainV2">Plain old filesystem\nGot read-only access? See our <a href="https://www.github.com/wolpi/prim-ftpd/">GitHub page</a>.</string>
    <string name="storageTypeRoot">Super user (device must be rooted)</string>
    <string name="storageTypeSaf">"Android Storage Access Framework (SAF)\n(e.g. for external SD-card)"</string>
    <string name="storageTypeRoSaf">Read only SAF (faster !)</string>
    <string name="storageTypeVirtual">Virtual Folders (provides all Storage Types)</string>
    <string name="safExplainHeading">How SAF works</string>
    <string name="safExplainV2">Android will ask you to choose a directory. That will be available via server(s). Permission gets revoked and you have to re-select regularly? See our <a href="https://www.github.com/wolpi/prim-ftpd/">GitHub page</a>.</string>
    <string name="selectedSafUri">Selected SAF URI:</string>
    <string name="startServerAndExit">start server only</string>
    <string name="startServerAndUi">start with server</string>
    <string name="downloadOrSaveUrlToFile">Download or save URL to text file?</string>
    <string name="download">Download</string>
    <string name="saveToTextFile">Save to text file</string>
    <string name="open">Open</string>
    <string name="add">Add</string>
    <string name="filepickerCreateFolderError">Could not create folder</string>
    <string name="filepickerNewFolder">New folder</string>
    <string name="filepickerNewFolderOk">@android:string/ok</string>
    <string name="filepickerNewFolderCancel">@android:string/cancel</string>
    <string name="filepickerListOk">@android:string/ok</string>
    <string name="clientActionsLabel">Client Action Log</string>
    <string name="statsLabel">Stats</string>
    <string name="statsTotalSent">Total Sent</string>
    <string name="statsTotalReceived">Total Received</string>
    <string name="statsSentPerSec">Sent per second</string>
    <string name="statsReceivedPerSec">Received per second</string>
    <string name="quickShareFiles">QuickShare files:</string>
    <string name="logFiles">Log files:</string>
    <string name="rootTmpFiles">Temp files of root access:</string>
    <string name="delete">Delete</string>
    <string name="mobileUiShort">Mobile Mode</string>
    <string name="mobileUiLong">Mobile Device Mode</string>
    <string name="tvUiShort">TV Mode</string>
    <string name="tvUiLong">Television Mode</string>
    <string name="iconQrCode">QR Code</string>
    <string name="iconKeysFingerprints">Keys Fingerprints</string>
    <string name="iconCleanSpace">Clean Space</string>
    <string name="iconAbout">About</string>
</resources>