<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- stats label -->
    <TextView
        android:id="@+id/statsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:text="@string/statsLabel"
        />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="4"
        android:rowCount="2">

        <!-- total sent -->
        <TextView
            android:id="@+id/statsTotalSentLabel"
            android:text="@string/statsTotalSent"
            android:layout_row="0"
            android:layout_column="0"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/statsTotalSent"
            android:layout_row="0"
            android:layout_column="1"
            android:padding="5dp"
            />

        <!-- total received -->
        <TextView
            android:id="@+id/statsTotalReceivedLabel"
            android:text="@string/statsTotalReceived"
            android:layout_row="1"
            android:layout_column="0"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/statsTotalReceived"
            android:layout_row="1"
            android:layout_column="1"
            android:padding="5dp"
            />

        <!-- sent per sec -->
        <TextView
            android:id="@+id/statsSentPerSecLabel"
            android:text="@string/statsSentPerSec"
            android:layout_row="0"
            android:layout_column="2"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/statsSentPerSec"
            android:layout_row="0"
            android:layout_column="3"
            android:padding="5dp"
            />

        <!-- received per sec -->
        <TextView
            android:id="@+id/statsReceivedPerSecLabel"
            android:text="@string/statsReceivedPerSec"
            android:layout_row="1"
            android:layout_column="2"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/statsReceivedPerSec"
            android:layout_row="1"
            android:layout_column="3"
            android:padding="5dp"
            />
    </GridLayout>

</merge>
